# AGI.IO

./: CMakeLists.txt  README.txt  main.cpp
GPT/: LSTM.py  apiCalls.py
agi/: CMakeLists.txt  README.md
agi/headers/: Preprocessor.h  cacheManager.h  dataStore.h  nlp.h
agi/src/: Preprocessor.cpp  cacheManager.cpp  nlp.cpp
headers/: io.h
src/: dataStore.cpp  io.cpp  main.cpp
